--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Is Today Second Saturday? - Bank Holiday Checker</title>
+
+  <title>SaturdayTracker | Custody, Shifts & Bank Holiday Calculator</title>
+
   <meta name="description"
-    content="Instantly check if today is a Second Saturday. Banking holiday checker. Calculate 2nd & 4th Saturday bank holidays, co-parenting schedules, and shift patterns." />
+    content="The universal Saturday schedule planner. Instantly calculate co-parenting weekends, shift work patterns, and 2nd & 4th Saturday bank holidays." />
+
+  <link rel="icon" type="image/png" href="/favicon.png" />
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
+
   <script>
     tailwind.config = {
       darkMode: 'class',
@@ -40,19 +46,21 @@
       },
     }
   </script>
+
   <style>
     /* Removed hardcoded body bg/color to allow Tailwind classes to work */
   </style>
+
   <script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0"
+  {
+    "imports": {
+      "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+      "react/": "https://esm.sh/react@^19.2.3/",
+      "react": "https://esm.sh/react@^19.2.3",
+      "lucide-react": "https://esm.sh/lucide-react@^0.561.0"
+    }
   }
-}
-</script>
+  </script>
   <link rel="stylesheet" href="/index.css">
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5019551171853082"
@@ -66,7 +74,6 @@
 
     gtag('config', 'G-P0C8KKP8VH');
   </script>
-
 </head>
 
 <body
@@ -95,7 +102,8 @@
           </p>
           <ul style="list-style-type: disc; margin-left: 20px; line-height: 1.6;">
             <li>Verify upcoming bank holidays for the next 2 years.</li>
-            <li>Plan co-parenting schedules (e.g., alternating weekends or 2-2-3 schedules).</li>
+            <li>Plan custody schedules (e.g., alternating weekends, 2-2-3 patterns, or 2nd/4th Saturday visitations).
+            </li>
             <li>Track employee shift patterns that fall on specific Saturdays.</li>
             <li>Download your custom schedule to Google Calendar or Outlook.</li>
           </ul>
